--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>gn</h1>
 
-<p>My first paragraph.</p>
+<p>Post1 graphQL vs JSON RPC local node.</p>
+<p>Speed test. Qty of pairs fetched.</p>
 
 </body>
 </html>
